force-app/main/default/objects/HRGAssignment__c/HRGAssignment__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>HRGAssignment</label>
</CustomObject>