force-app/main/default/objects/HRGAssignment__c/fields/EmpMax__c.field-meta.xml
<CustomField>
    <fullName>EmpMax__c</fullName>
    <label>Emp Max</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>