force-app/main/default/objects/HRGAssignment__c/fields/EmpMin__c.field-meta.xml
<CustomField>
    <fullName>EmpMin__c</fullName>
    <label>Emp Min</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>