force-app/main/default/objects/HRGAssignment__c/fields/IsRoundRobin__c.field-meta.xml
<CustomField>
    <fullName>IsRoundRobin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsRoundRobin</label>
    <type>Checkbox</type>
</CustomField>