force-app/main/default/objects/HRGAssignment__c/fields/Spanish_Speaking_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Spanish_Speaking_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether looking at spanish speaking queue or english speaking queue</description>
    <label>Spanish Speaking Indicator</label>
    <type>Checkbox</type>
</CustomField>