force-app/main/default/objects/HRGAssignment__c/fields/States__c.field-meta.xml
<CustomField>
    <fullName>States__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>States</label>
    <length>255</length>
    <type>Text</type>
</CustomField>